--- a/index.html
+++ b/index.html
@@ -53,11 +53,17 @@
         <!-- Telegram Section -->
         <section class="text-center py-20 px-4 bg-yellow-100">
             <h2 class="text-2xl font-bold mb-4">🛕 Join the BuddhaFi Temple</h2>
-            <p class="mb-6 text-lg">Step into the calmest chat in crypto. Memes, meditation, and moon vibes.</p>
-            <a href="https://t.me/buddhafi" target="_blank"
-                class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-full transition shadow-md">
-                Join Telegram
-            </a>
+            <p class="mb-6 text-lg">Connect directly with the community. Stillness meets memes, live.</p>
+
+            <!-- Telegram Embed Widget -->
+            <div class="flex justify-center">
+                <iframe src="https://t.me/buddhaficoin?embed=1" width="350" height="500" frameborder="0" scrolling="no"
+                    allowtransparency="true"
+                    style="border-radius: 10px; box-shadow: 0 4px 16px rgba(0,0,0,0.2);"></iframe>
+            </div>
+
+            <p class="mt-4 text-sm text-gray-700">Or <a href="https://t.me/buddhafi" class="text-blue-700 underline"
+                    target="_blank">open in Telegram</a></p>
         </section>
 
         <!-- Twitter Feed -->
@@ -77,7 +83,8 @@
             <h2 class="text-2xl font-bold mb-4">Links</h2>
             <ul class="space-y-2 text-blue-700 font-medium">
                 <li>
-                    <a href="https://pump.fun/coin/BkBRPHqMETUD4gg7kgzGg38dqS9bR7hFaNAgMJYipump" target="_blank">Buy on
+                    <a href="https://pump.fun/coin/BkBRPHqMETUD4gg7kgzGg38dqS9bR7hFaNAgMJYipump" target="_blank">Buy
+                        on
                         Pump.fun</a>
                 </li>
                 <li>
