--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
                 opacity: 0;
             }
         }
+
+        .blob {
+            position: absolute;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.15), transparent);
+            border-radius: 50%;
+            animation: blobFloat 20s ease-in-out infinite alternate;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        @keyframes blobFloat {
+            0% {
+                transform: scale(1) translateY(0px);
+                opacity: 0.5;
+            }
+            100% {
+                transform: scale(1.3) translateY(-30px);
+                opacity: 0.8;
+            }
+        }
     </style>
 
     <div class="fixed top-0 left-0 w-full h-full pointer-events-none z-0">
@@ -58,6 +78,14 @@
         <div class="sparkle" style="left: 60%; animation-delay: 3s;"></div>
         <div class="sparkle" style="left: 80%; animation-delay: 4s;"></div>
     </div>
+    
+    <div class="fixed top-0 left-0 w-full h-full z-0 pointer-events-none overflow-hidden">
+        <div class="blob" style="width: 300px; height: 300px; top: 20%; left: 10%; animation-delay: 0s;"></div>
+        <div class="blob" style="width: 250px; height: 250px; top: 50%; left: 70%; animation-delay: 2s;"></div>
+        <div class="blob" style="width: 200px; height: 200px; top: 75%; left: 30%; animation-delay: 4s;"></div>
+        <div class="blob" style="width: 350px; height: 350px; top: 10%; left: 80%; animation-delay: 6s;"></div>
+    </div>
+    
     <main class="min-h-screen">
         <!-- Hero -->
         <section class="text-center py-20 px-4">
